dashboard element for arabic-like alignment fixed

--- a/app/MyApp/app/Home.css
+++ b/app/MyApp/app/Home.css
@@ -160,10 +160,6 @@ background-color:#E1E1E1;
 {
 	height: 400px;
 }
-.stu-nav-tube
-{
-border: 5px solid black;
-}
 .name{
 	 font-size: 30px;
 	 padding-top: 12px;
